<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.example.educationtools.MainActivity">

    <Button
        android:id="@+id/btnLfuTwoPoint"
        android:text="@string/btn_lfu_two_point"
        android:textAllCaps="false"
        style="@style/btn"
        app:backgroundTint="@color/ColorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnLfuOnePointM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLfuOneMb"
        android:text="@string/btn_lfu_b_m"
        android:textAllCaps="false"
        style="@style/btn"
        app:backgroundTint="@color/ColorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnLfuAbc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLfuOnePointM" />

    <Button
        android:id="@+id/btnLfuAbc"
        android:text="@string/btn_lfu_abc"
        android:textAllCaps="false"
        style="@style/btn"
        app:backgroundTint="@color/ColorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnLfuCanonical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLfuOneMb" />

    <Button
        android:id="@+id/btnLfuCanonical"
        android:text="@string/btn_lfu_canonical"
        android:textAllCaps="false"
        style="@style/btn"
        app:backgroundTint="@color/ColorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLfuAbc" />

    <Button
        android:id="@+id/btnLfuOnePointM"
        android:text="@string/btn_lfu_one_point_m"
        android:textAllCaps="false"
        style="@style/btn"
        app:backgroundTint="@color/ColorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnLfuOneMb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLfuTwoPoint" />

</androidx.constraintlayout.widget.ConstraintLayout>